  - allow to optionally send mail copy to message sender (checkbox is checked by default if
    phpui.send_message_to_sender_checkbox is set to true) [chilan]
  - added phpui.capitalize_node_names setting which is true by default and decides
    if node names are automatically capitalized during node add or update [chilan]

version 1.11.18 (2015-10-01):

  - added support of new style plugins in userpanel - hooks executed before
    module load have 'userpanel_*_on_load' name pattern [chilan]
  - added support of new style plugins in userpanel module setup part [chilan]
  - template inheritance chains are supported; we can use the same names
    for all templates in chain - should be very usefull in plugins [chilan]
  - move upgrade db schema code to LMSDB class - it can also be used by plugins [chilan]
  - added simple plugin management form [chilan]
  - added support for old style plugin management [chilan]
  - added location to voip accounts as we're preparing for plicbd2 localisation service [chilan]
  - we can add many mail accounts in customer properties (customers.mail field in db was removed,
    but values set so far are stored in customercontacts table from now) [chilan]
  - added smarty blocks for customer assignments template [maciejlew]
  - added smarty blocks for customer list template [maciejlew]
  - added smarty blocks for customer voip accounts list template [maciejlew]
  - added smarty blocks for voip account add template [maciejlew]
  - added smarty blocks for voip account edit template [maciejlew]
  - added smarty blocks for voip account info template [maciejlew]
  - added smarty blocks for voip account list template [maciejlew]
  - added number_of_table_columns variables at voip account list template that can be used by plugins [maciejlew]
  - added customerlist-list-columns smarty block at customer list template [maciejlew]
  - added number_of_table_columns variables at customer list template [maciejlew]